k8s/node-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  #labels for deployment; used by service
  labels:
    #has to be the same label as the pods as service uses this label to find the pods
    app: nodejs
spec:
  replicas: 1
  # LABEL matched my SELECTOR
  # tellling deployment to match the pods with the label app: nodejs
  selector:
    matchLabels:
      app: nodejs
  # template  has its own metadata and spec
  # blueprint for pod
  template:
    metadata:
      #label for pod; used by deployment
      labels:
        app: nodejs
    spec:
      containers:
      - name: backend-pod
        image: us-west1-docker.pkg.dev/mern-cloud-run-cloud-build/ar-mern-backend/uploaded-mern-backend-image:0bf4bbd
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: nodejs
  type: ClusterIP
  ports:
    - protocol: TCP
      #port on which service is exposed within the cluster 
      port: 4000
      # port of the pod
      targetPort: 4000
