k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
  #   kubernetes.io/ingress.regional-static-ip-name: "mern-ip"
    kubernetes.io/ingress.allow-http: "true" 
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: reactjs-service
            port:
              number: 3000
      - pathType: Prefix
        path: "/api/*"
        backend:
          service:
            name: nodejs-service
            port:
              number: 4000
